--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -4,4 +4,7 @@ layout: default
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
-{{ content }}
+<body>
+  {% include navigation.html %}
+  {{ content }}
+</body>
