--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,10 +1,17 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
-<body>
-  {% include navigation.html %}
-  {{ content }}
-</body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+    <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+    <link rel="stylesheet" href="/assets/css/styles.css">
+  </head>
+  <body>
+    {% include navigation.html %}
+    {{ content }}
+  </body>
+</html>
